# jsonwebtoken

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Mayhemfile  README.md  old.mayhem.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  github_action_test.yml  mayhem.yml
benches/: jwt.rs
examples/: atproto.rs  auth0.rs  claims.rs  custom_chrono.rs  custom_header.rs  custom_provider.rs  custom_time.rs  ed25519.rs  extras_header.rs  validation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decoding_key_ec.rs  decoding_key_ed.rs  decoding_key_rsa.rs  encoding_key_ec.rs  encoding_key_ed.rs  encoding_key_rsa.rs  target.rs
jsonwebtoken-proc-macros/: Cargo.toml
jsonwebtoken-proc-macros/src/: lib.rs
proptest-regressions/: jwk.txt
src/: algorithms.rs  ans1.rs  builder.rs  claims.rs  crypto.rs  decoding.rs  encoding.rs  errors.rs  header.rs  jwk.rs  jws.rs  keys.rs  lib.rs  pem_decoder.rs  pem_encoder.rs  serialization.rs  utils.rs  validation.rs  validator.rs
src/crypto/: core.rs  ecdsa.rs  eddsa.rs  hmac.rs  macros.rs  mod.rs  rsa.rs  utils.rs
src/crypto/aws_lc/: ecdsa.rs  eddsa.rs  hmac.rs  mod.rs  rsa.rs
src/crypto/botan/: ecdsa.rs  eddsa.rs  hmac.rs  mod.rs  rsa.rs
src/crypto/openssl/: ecdsa.rs  eddsa.rs  hmac.rs  mod.rs  rsa.rs
src/crypto/rust_crypto/: ecdsa.rs  eddsa.rs  hmac.rs  mod.rs  rsa.rs
src/pem/: decoder.rs  encoder.rs  mod.rs
src/time/: chrono.rs  mod.rs  time_crate.rs
tests/: dangerous.rs  ecdsa.rs  hmac.rs  lib.rs  notes.md  private_ecdsa_key.pk8  private_rsa_key.der  private_rsa_key.pem  public_ecdsa_key.pk8  public_rsa_key.der  public_rsa_key.pem  rsa.rs
tests/ec/: mod.rs  private_ecdsa_key.pem
tests/ecdsa/: mod.rs  private_es256k_key.pem  private_es512_key.pem  private_es512_key.pk8  private_jwtio.pem  private_jwtio_pkcs8.pem  public_ecdsa_key.pem  public_es256k_jwk.json  public_es256k_key.pem  public_es512_key.pem  public_es512_key.pk8  public_jwtio.pem
tests/eddsa/: mod.rs  private_ed25519_key.pem  private_ed25519_key.pk8  private_ed448_key.pem  public_ed25519_key.pem  public_ed25519_key.pk8
tests/header/: cert_chain.json  cert_chain.pem  mod.rs
tests/rsa/: README.md  certificate_jwtio.crt  certificate_jwtio.csr  certificate_rsa_key_pkcs1.crt  certificate_rsa_key_pkcs8.crt  certificate_rsa_key_pkcs8.csr  mod.rs  private_rsa_key_pkcs8.pem
