[package]
name = "jsonwebtoken_for_jws"
version = "0.0.1"
authors = ["Jeremiah Devine <jeremiah.devine@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Create and decode JWTs with support for JWS in a strongly typed way."
homepage = "https://github.com/drath3000/jsonwebtoken_for_jws"
repository = "https://github.com/drath3000/jsonwebtoken_for_jws"
keywords = ["jwt", "api", "token", "jwk", "jws"]
edition = "2021"
include = [
    "src/**/*",
    "benches/**/*",
    "tests/**/*",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]
rust-version = "1.73.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
# For PEM decoding
pem = { version = "3", optional = true }
simple_asn1 = { version = "0.6", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.17.4", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
ring = { version = "0.17.4", features = ["std", "wasm32_unknown_unknown_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.1"

[target.'cfg(not(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi")))))'.dev-dependencies]
# For the custom time example
time = "0.3"
criterion = "0.4"

[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dev-dependencies]
# For the custom time example
time = { version = "0.3", features = ["wasm-bindgen"] }
criterion = { version = "0.4", default-features = false }

[features]
default = ["use_pem"]
use_pem = ["pem", "simple_asn1"]

[[bench]]
name = "jwt"
harness = false

[badges]
maintenance = { status = "passively-maintained" }
